  https://docs.openvehicles.com/en/latest/userguide/scripting.html#ovmsvehicle-command-plugins
- Renault Twizy: read battery energy available from BMS (thanks to Martin Bitz)
  New metrics:
    xrt.b.energy.avail                -- Current battery energy available [kWh] (aged)
    xrt.b.energy.full                 -- Maximum battery energy capacity [kWh] (aged, needs full charge)
- Add button on web file editor to reload ECU (when ECU is enabled).

2022-09-01 MWJ  3.3.003  OTA release
- Toyota RAV4 EV: Initial support added. Only the Tesla bus is decoded and just listening so far.
- Location: configurable flatbed movement alarm repetition
  New configs:
    [vehicle] flatbed.alarminterval     -- in minutes, default 15, 0 = single alarm
- GPS: added normalized signal quality level, added web UI live status info
  New metrics:
    v.p.gpssq                           -- GPS signal quality [%] (<30 unusable, >50 good, >80 excellent)
    v.p.gpstime                         -- Time (UTC) of GPS coordinates [Seconds]
- Location: flatbed movement alarm only with reliable positioning
  New configs:
    [vehicle] gps.sq.good               -- SQ level for location state "reliable", default 60
    [vehicle] gps.sq.bad                -- SQ level for location state "unreliable", default 40
  New events:
    gps.sq.good                         -- GPS position is now reliable
    gps.sq.bad                          -- GPS position is now unreliable
- Improvements to SIM7600 driver to support E-UTRAN LTE only cellular providers
- Enhance 'cellular cmd' to show output from modem

2022-03-07 MWJ  3.3.002  OTA release
- Maxus eDeliver3: Updated speed PID
- Bolt EV: Add early Bolt EV support
- Maxus eDeliver3: Add CCS Charging
	rewrite polling system
- Volt/Ampera:: added notification for "fuel" metric.
    new config: [xva] notify_va_metrics 	(bool, default no)
- Server V2/V3: added manual update request
    Note: the servers normally don't need a manual trigger to perform